third-party/rust/crates/better_default/1.0.5/tests/compile_fail/attribute_duplicates_on_same_field.rs
#![allow(dead_code)]

use better_default::Default;

#[derive(Default)]
enum Enum2 {
    #[default]
    #[default]
    Variant {
        first: u32,
        second: String,
    },

    Variant2,

    Variant3,
}

#[derive(Default)]
struct Struct {
    #[default(0)]
    #[default(1)]
    field: u32
}

fn main() {}