third-party/rust/crates/better_default/1.0.5/tests/compile_fail/attribute_duplicates_on_same_field.stderr
error: this attribute is already declared.
 --> tests/compile_fail/attribute_duplicates_on_same_field.rs:8:7
  |
8 |     #[default]
  |       ^^^^^^^

error: this attribute is already declared.
  --> tests/compile_fail/attribute_duplicates_on_same_field.rs:22:7
   |
22 |     #[default(1)]
   |       ^^^^^^^
